--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
+    <title>(｡･∀･)ﾉﾞ嗨, Xiao</title>
     <link rel="shortcut icon" href="./head.ico" type="image/x-icon">
     <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, maximum-scale=1"> 
   </head>
