--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>(｡･∀･)ﾉﾞ嗨, Xiao</title>
     <link rel="shortcut icon" href="./head.ico" type="image/x-icon">
+    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
     <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, maximum-scale=1"> 
   </head>
   <body>
