--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Young</title>
-    <link rel="shortcut icon" href="/head.ico" type="image/x-icon">
+    <title> Awkward Article </title>
+    <link rel="shortcut icon" href="/staticImage/dog.ico" type="image/x-icon">
     <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   </head>
