--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -2,11 +2,11 @@
 <html lang="zh" dir="ltr">
 <head>
 	<meta charset="UTF-8">
-	<title>Awkward Article - 更轻量, 更快速阅读文章的体验</title>
+	<title>Awkward Article - 更轻量, 更快速阅读文章</title>
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Awkward Article - 致力于带来更轻量, 更快速阅读文章的体验">
-	<meta name="keywords" content="Awkward, Article, 博客, 文章">
+	<meta name="keywords" content="Awkward, Article, Awkward Article, 博客, 文章, 更轻量, 更快速阅读文章">
 	<link rel="shortcut icon" href="/staticImage/dog.ico" type="image/x-icon">
 	<link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
 </head>
